book controller updated for Swagger
