# controllers/book_controller.go
@@ -12,6 +12,13 @@ import (
 type BookController struct {
 }
 
+// GetBooks            godoc
+// @Summary		Get books array
+// @Description	Responds with the list of all books as JSON.
+// @Tags			books
+// @Produce		json
+// @Success		200	{object}	entities.Book
+// @Router			/books [get]
 func (b BookController) GetAll(c *gin.Context) {
 	var bookModel models.BookModel
 	books, _ := bookModel.GetAll()
@@ -19,6 +26,16 @@ func (b BookController) GetAll(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, books)
 }
 
+// GetBook          godoc
+// @Summary		Get single book by id
+// @Description	Returns the book whose id value matches the id.
+// @Tags			books
+// @Produce		json
+// @Param			id path	string true "search book by id"
+// @Success		200		{object}	entities.Book
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/books/{id} [get]
 func (b BookController) GetById(c *gin.Context) {
 	str_id := c.Param("id")
 	int_id, errId := strconv.Atoi(str_id)
@@ -40,6 +57,16 @@ func (b BookController) GetById(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, book)
 }
 
+// CreateBook           godoc
+// @Summary		Add a new book
+// @Description	Takes a book JSON and store in DB. Return saved JSON.
+// @Tags			books
+// @Produce		json
+// @Param			book body	entities.Book	true "Book JSON"
+// @Success		200		{object}	entities.Book
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/books [post]
 func (b BookController) Create(c *gin.Context) {
 	var book entities.Book
 	err := c.ShouldBindJSON(&book)
@@ -63,6 +90,16 @@ func (b BookController) Create(c *gin.Context) {
 
 }
 
+// EditBook          godoc
+// @Summary		Edit an book
+// @Description	Takes a book JSON and edit an in DB. Return saved JSON.
+// @Tags			books
+// @Produce		json
+// @Param			book body	entities.Book	true "Book JSON"
+// @Success		200		{object}	entities.Book
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/books [put]
 func (b BookController) Edit(c *gin.Context) {
 	var book entities.Book
 	err := c.ShouldBindJSON(&book)
@@ -86,6 +123,16 @@ func (b BookController) Edit(c *gin.Context) {
 
 }
 
+// DeleteBook           godoc
+// @Summary		Delete an book
+// @Description	Remove an book from DB by id.
+// @Tags			books
+// @Produce		json
+// @Param			id path	string true "delete book by id"
+// @Success		200		{object}	entities.Book
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/books/{id} [delete]
 func (b BookController) Delete(c *gin.Context) {
 
 	str_id := c.Param("id")
